# nail

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in
.dvc/: config
dvc/: .gitignore  numerai.dvc
nail/: __init__.py  __main__.py  california.py  config.py  dask.py  data.py  fabric.py  feature.py  model.py  predict.py  repartition.py  submit.py  train.py  utils.py  validator.py
tf/: main.tf
