[tool.poetry]
name = "nail"
version = "0.1.0"
description = "\"Numerai with Lightning\""
authors = ["jacksonneal <jacksontneal@gmail.com>"]
license = "\"MIT\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
