[project]
name = "nail"
description = "Numerai with Lightning"
authors = [{name = "Jackson Neal", email = "jacksontneal@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version", "dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nail"]

[tool.setuptools.dynamic]
version = {attr = "nail.version"}
dependencies = {file = ["requirements.in"]}
optional-dependencies.dev = {file = ["requirements-dev.in"]}

[tool.mypy]
ignore_missing_imports = "True"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-s"

[tool.ruff]
preview = true
select = ["ALL"]
